@@ -392,17 +392,17 @@ ACE_XtReactor::reset_timer_interval
 }
 
 long
-ACE_XtReactor::schedule_timer (ACE_Event_Handler *handler,
-			       const void *arg,
-			       const ACE_Time_Value &delay_time,
+ACE_XtReactor::schedule_timer (ACE_Event_Handler *event_handler,
+                const void *arg,
+                const ACE_Time_Value &delay,
 			       const ACE_Time_Value &interval)
 {
   ACE_TRACE ("ACE_XtReactor::schedule_timer");
   ACE_MT (ACE_GUARD_RETURN (ACE_Select_Reactor_Token, ace_mon, this->token_, -1));
 
-  long result = ACE_Select_Reactor::schedule_timer (handler,
+  long result = ACE_Select_Reactor::schedule_timer (event_handler,
                                                     arg,
-                                                    delay_time,
+                                                    delay,
                                                     interval);
   if (result == -1)
     return -1;
