@@ -70,9 +70,9 @@ public:
   void context (XtAppContext);
 
   // = Timer operations.
-  virtual long schedule_timer (ACE_Event_Handler *handler,
+  virtual long schedule_timer (ACE_Event_Handler *event_handler,
                                const void *arg,
-                               const ACE_Time_Value &delay_time,
+                               const ACE_Time_Value &delay,
                                const ACE_Time_Value &interval);
   virtual int reset_timer_interval (long timer_id,
                                     const ACE_Time_Value &interval);
